<resources>
    <string name="app_name">FindMe</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LogIn</string>
    <string name="welcome">Bun Venit!</string>

    <string name="signup">Inregistreaza-te</string>
    <string name="fullname">Nume</string>
    <string name="email">Email</string>
    <string name="yesAccount">Ai deja un cont? Intra aici</string>
</resources>