<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bk">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"

            android:layout_marginTop="200dp"

            android:id="@+id/textInputLayoutWelcome"
            android:gravity="center"
            android:textSize="40sp"
            android:fontFamily="@font/poppinsbold"
            android:textColor="@color/silver" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="30dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="30dp"/>
    <Button

            android:layout_height="wrap_content"
            android:id="@+id/buttonLog"
            android:text="@string/login"
            android:layout_width="200dp"
            android:fontFamily="@font/poppinsbold"
            style="@style/Widget.AppCompat.Button.Colored"
            app:backgroundTint="#2F273E" app:layout_constraintTop_toTopOf="@id/textInputLayoutWelcome"
            android:layout_marginTop="150dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="100dp" android:layout_marginEnd="100dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="330dp"/>
    <Button

            android:layout_height="wrap_content"
            android:id="@+id/buttonSign"
            android:text="@string/signup"
            android:layout_width="200dp"
            android:fontFamily="@font/poppinsbold"
            style="@style/Widget.AppCompat.Button.Colored"
            app:backgroundTint="#2F273E" app:layout_constraintTop_toTopOf="@id/textInputLayoutWelcome"
            android:layout_marginTop="250dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="110dp" android:layout_marginEnd="111dp"
            app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>