<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bk"
        tools:context=".SignUp">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="80dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="70dp"

            android:gravity="center"
            android:textSize="30sp"
            android:id="@+id/textInputLayoutSignUp"
            android:fontFamily="@font/poppinsbold"
            android:textColor="@color/silver"/>
    <!---Fullname layout-->
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:hint="@string/fullname"
            android:layout_height="50dp"
            android:id="@+id/textInputLayoutSignName"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutSignUp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/textInputLayoutSignUp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp">


        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/poppinsmedium"
                android:drawableEnd="@drawable/ic_name"
                android:textColor="@color/black"
                android:textSize="20sp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <!---Username layout-->

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:hint="@string/username"
            android:layout_height="50dp" android:id="@+id/textInputLayoutSignUser"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutSignName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            android:layout_marginTop="35dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp">


        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/poppinsmedium"

                android:textColor="@color/black"
                android:textSize="20sp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <!---Password layout-->
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:hint="@string/password"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="350dp"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutSignUser"
            android:id="@+id/textInputLayoutSignPass"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            android:layout_marginTop="35dp"
           >

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/poppinsmedium"
                android:drawableEnd="@drawable/ic_lock"
                android:textColor="@color/black"
                android:inputType="textPassword"
                app:endIconMode="password_toggle"
                android:textSize="20sp"
        />
    </com.google.android.material.textfield.TextInputLayout>
    <!---Email layout-->
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:hint="@string/email"
            android:layout_height="50dp"

            android:id="@+id/textInputLayoutSignEmail"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutSignPass"
            android:layout_marginTop="35dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/poppinsmedium"
                android:drawableEnd="@drawable/ic_email"
                android:textColor="@color/black"
                android:textSize="20sp"
        />
    </com.google.android.material.textfield.TextInputLayout>
    <!---job layout-->
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutSignEmail"
            android:layout_marginTop="35dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="230dp">
        <CheckBox android:id="@+id/checkbox_job"
                  android:layout_width="85dp"
                  android:layout_height="wrap_content"
                  android:text="Job"
                  android:fontFamily="@font/poppinsmedium"
                  android:textColor="@color/purple"
                  android:textSize="20sp"
                  android:checked="false"/>

    </LinearLayout>
    <!---student layout-->
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutSignEmail"
            android:layout_marginTop="35dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="200dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="40dp"
    >
        <CheckBox android:id="@+id/checkbox_student"
                  android:layout_width="155dp"
                  android:layout_height="wrap_content"
                  android:text="Elev/Student"
                  android:fontFamily="@font/poppinsmedium"
                  android:textColor="@color/purple"
                  android:textSize="18sp"
                  android:checked="false"/>

    </LinearLayout>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSignIn"
            android:text="@string/signup"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutSignUp"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/poppinsbold"
            app:backgroundTint="#2F273E" android:layout_marginTop="450dp"/>
    <Button
            android:id="@+id/buttonYesAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yesAccount"
            app:layout_constraintTop_toBottomOf="@+id/buttonSignIn"
            app:layout_constraintStart_toStartOf="@+id/buttonSignIn"
            app:layout_constraintEnd_toEndOf="@+id/buttonSignIn"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/poppinsbold"
            android:textSize="12sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>