<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bk"
        tools:context=".LogIn">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="150dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="141dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayoutLogUser"
            android:id="@+id/textInputLayoutLog"
            android:gravity="center"
            android:textSize="40sp"
            android:fontFamily="@font/poppinsbold"
            android:textColor="@color/silver"/>
        <!---Username layout-->
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:hint="@string/username"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayoutLogUser"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayoutLogPass"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="150dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            >


        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsmedium"
                android:drawableEnd="@drawable/ic_user"
                android:textColor="@color/black"
                android:textSize="15sp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <!---Password layout-->
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:hint="@string/password"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="200dp"
            android:id="@+id/textInputLayoutLogPass"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutLogUser"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
    >

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsmedium"
                android:drawableEnd="@drawable/ic_lock"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:inputType="textPassword"
                app:endIconMode="password_toggle"
               />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textErrorLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutLogPass"
            android:layout_marginTop="20dp"
            android:text=""
            android:textSize="15sp"
            android:fontFamily="@font/poppinsbold"
            android:textColor="@color/red"
            app:layout_constraintVertical_bias="0.016" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSubmitLog"
            android:text="@string/login" android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayoutLogUser"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutLogPass"
            app:layout_constraintVertical_bias="0.0" android:layout_marginTop="70dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="161dp"
            android:layout_marginEnd="162dp" app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/poppinsbold"
            style="@style/Widget.AppCompat.Button.Colored"
            app:backgroundTint="#2F273E"/>
    <Button
            android:id="@+id/buttonNoAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nu ai un cont? Intra aici"
            app:layout_constraintTop_toBottomOf="@+id/buttonSubmitLog"
            app:layout_constraintStart_toStartOf="@+id/buttonSubmitLog"
            app:layout_constraintEnd_toEndOf="@+id/buttonSubmitLog"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/poppinsbold"
            android:textSize="10sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>